# saucedemo_e2e

./: .gitignore  README.md  config.json  conftest.py  constants.py  pyproject.toml  pytest.ini  run.bat  run_test.bat
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py  product_detail_page.py
tests/: data.py  test_authentication.py  test_e2e_checkout.py
